Put tests into the makefile

--- a/patternsend/Makefile
+++ b/patternsend/Makefile
@@ -13,6 +13,13 @@ shell.o: shell.d
 	dmd shell.d -c
 
 
+projector.test.o:
+	dmd lightcrafter/projector.d -c -unittest
+
+with-tests: lightcrafter.o shell.o projector.test.o
+	dmd *.o -ofshell.test.out	 
+   
+
 clean:
 	rm *.o
 	rm shell.out
