Got the "load sequence command" into the shell

--- a/patternsend/Makefile
+++ b/patternsend/Makefile
@@ -17,7 +17,7 @@ projector.test.o:
 	dmd lightcrafter/projector.d -c -unittest
 
 with-tests: lightcrafter.o shell.o projector.test.o
-	dmd *.o -ofshell.test.out	 
+	dmd **.d -unittest 
    
 
 clean:
