Added bmpencoder.d and the new Makefile
bmpencoder.d will not build without bmpfile.o

Download from google and build

--- a/patternsend/Makefile
+++ b/patternsend/Makefile
@@ -1,6 +1,6 @@
-all: projector.o shell.o constants.o patternsend.o
-	dmd constants.o projector.o shell.o  -ofshell.out
-	dmd constants.o projector.o patternsend.o  -ofpatternsend
+all: projector.o shell.o constants.o patternsend.o 
+	dmd constants.o projector.o shell.o -ofshell.out
+	dmd constants.o projector.o patternsend.o bmpfile.o -ofpatternsend
 
 
 constants.o: lightcrafter/constants.d
@@ -15,6 +15,10 @@ patternsend.o: patternsend.d
    
 shell.o: shell.d	
 	dmd shell.d -c
+
+
+bmpencoder.o: bmpencoder.d
+	dmd bmpencoder.d bmpfile.o -unittest
 
 
 projector.test.o:
